Initial implementation of heat-templates
Related-Prod: PRODX-3033
Change-Id: Iee5609e00a1403d6a4b8e689b64c496e73648f67

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 2.0
 skipdist = True
-envlist = pep8,py36
+envlist = pep8,bashate,py36
 # Automatic envs (pyXX) will only use the python version appropriate to that
 # env and ignore basepython inherited from [testenv] if we set
 # ignore_basepython_conflict.
@@ -29,12 +29,34 @@ commands =
     black openstack_refapp tests
     flake8 openstack_refapp tests
 
+[testenv:bashate]
+envdir={toxworkdir}/pep8
+whitelist_externals = bash
+commands = bash -c "find {toxinidir}             \
+         -not \( -type d -name .?\* -prune \)    \
+         -not \( -type d -name doc -prune \)     \
+         -not \( -type f -name localrc -prune \) \
+         -type f                                 \
+         -not -name \*~                          \
+         -not -name \*.md                        \
+         -not -name \*.orig                      \
+         -not -name \*.rej                       \
+         -not -name \*.yaml                      \
+         -not -name \*.lic                       \
+         -not -name \*.py                        \
+         \(                                      \
+          -name \*.sh -or                        \
+          -wholename \*/de/\*                    \
+         \)                                      \
+         -print0 | xargs -0 bashate -v -iE006 -eE005,E042"
+
 [testenv:dev]
 deps =
     .[mysql,pgsql]
 commands =
     os-refapp
     #gunicorn -c {toxinidir}/gunicorn.conf.py openstack_refapp.app:create_app()
+
 [flake8]
 extend-ignore = E203
 #extend-ignore = E203,E501
