--- a/heat-templates/top.yaml
+++ b/heat-templates/top.yaml
@@ -30,6 +30,9 @@ parameters:
     type: string
     default: 'docker-dev-kaas-local.docker.mirantis.net/openstack/openstack-refapp:0.0.1.dev1'
     description: The link to docker image with App
+  dns_nameservers:
+    type: json
+    default: []
 resources:
   key_pair:
     type: OS::Nova::KeyPair
@@ -44,6 +47,7 @@ resources:
       database_network_cidr: { get_param: database_network_cidr }
       app_network_cidr: { get_param: app_network_cidr }
       public_network_id: { get_param: public_network_id }
+      dns_nameservers: { get_param: dns_nameservers }
 
   database:
     type: ./fragments/DatabaseInstances.yaml
