Fix output value for app private ips
It was attempting to pull that attr from database resource,
seems like copy-paste issue.

Related-Issue: PRODX-5417
Change-Id: I75f7d6575f5cdda5bdd2cd829bfe6fdc5fcb930d

--- a/heat-templates/top.yaml
+++ b/heat-templates/top.yaml
@@ -82,7 +82,7 @@ outputs:
     value: { get_attr: [database, database_private_ips] }
   app_private_ips:
     description: Private IP addresses of the deployed app instances
-    value: { get_attr: [database, app_private_ips] }
+    value: { get_attr: [app, app_private_ips] }
   app_vip:
     description: VIP address of application
     value: { get_attr: [app, app_vip] }
