Use sourceip lb algo for db
apparently due to how mysql connections are managed and performed in our
app, this gives better stability.

Change-Id: I326a882b3f4ec21405588ab2f01719ccabec4a66
Related-Issue: PRODX-5417

--- a/heat-templates/fragments/DatabaseInstances.yaml
+++ b/heat-templates/fragments/DatabaseInstances.yaml
@@ -228,7 +228,7 @@ resources:
     type: OS::Octavia::Pool
     properties:
       listener: {get_resource: listener}
-      lb_algorithm: ROUND_ROBIN
+      lb_algorithm: SOURCE_IP
       protocol: TCP
       session_persistence:
         type: SOURCE_IP
