--- a/heat-templates/fragments/AppInstances.yaml
+++ b/heat-templates/fragments/AppInstances.yaml
@@ -17,7 +17,6 @@ parameters:
     type: string
   public_network_id:
     type: string
-    default: 'public'
   instance_01_az:
     type: string
     default: 'nova'
@@ -185,6 +184,24 @@ resources:
       fixed_ips:
         - subnet: { get_param: app_subnet_id }
 
+  server_01_floating_ip:
+    type: OS::Neutron::FloatingIP
+    properties:
+      floating_network_id: { get_param: public_network_id }
+      port_id: { get_resource: private_server_01_port }
+
+  server_02_floating_ip:
+    type: OS::Neutron::FloatingIP
+    properties:
+      floating_network_id: { get_param: public_network_id }
+      port_id: { get_resource: private_server_02_port }
+
+  server_03_floating_ip:
+    type: OS::Neutron::FloatingIP
+    properties:
+      floating_network_id: { get_param: public_network_id }
+      port_id: { get_resource: private_server_03_port }
+
   wait_handle:
     type: OS::Heat::WaitConditionHandle
   wait_condition:
@@ -261,3 +278,6 @@ outputs:
   app_vip:
     description: VIP address of app
     value: { get_attr: [ lb_floating, floating_ip_address ] }
+  app_floating_ips:
+    description: App instances floating IPs
+    value: [ {get_attr: [ server_01_floating_ip, floating_ip_address ]}, {get_attr: [ server_02_floating_ip, floating_ip_address ]}, {get_attr: [ server_03_floating_ip, floating_ip_address ]}]
