Change default DATABASE_DISK from vbc to vdb as there is no force_config_drive=True in current MOSK
Fixes_Bug: PRODX-21366

Change-Id: I2a73520564e8d4b78582c330eafff0acc45a7e91

--- a/heat-templates/fragments/DatabaseInstances.yaml
+++ b/heat-templates/fragments/DatabaseInstances.yaml
@@ -28,6 +28,8 @@ parameters:
     default: 'nova'
   database_admin_password:
     type: string
+  database_disk:
+    type: string
   volume_size:
     type: number
     description: The size of volume
@@ -53,6 +55,7 @@ resources:
             $node_02_ip: { get_attr: [private_server_02_port, fixed_ips, 0, ip_address] }
             $node_03_ip: { get_attr: [private_server_03_port, fixed_ips, 0, ip_address] }
             $database_admin_password: { get_param: database_admin_password }
+            $database_disk: { get_param: database_disk }
             $service_type: "database"
 
   install_config_agent_01:
@@ -75,6 +78,7 @@ resources:
             $node_02_ip: { get_attr: [private_server_02_port, fixed_ips, 0, ip_address] }
             $node_03_ip: { get_attr: [private_server_03_port, fixed_ips, 0, ip_address] }
             $database_admin_password: { get_param: database_admin_password }
+            $database_disk: { get_param: database_disk }
             $service_type: "database"
 
   install_config_agent_02:
@@ -97,6 +101,7 @@ resources:
             $node_02_ip: { get_attr: [private_server_02_port, fixed_ips, 0, ip_address] }
             $node_03_ip: { get_attr: [private_server_03_port, fixed_ips, 0, ip_address] }
             $database_admin_password: { get_param: database_admin_password }
+            $database_disk: { get_param: database_disk }
             $service_type: "database"
 
   install_config_agent_03:
