--- a/heat-templates/fragments/DatabaseInstances.yaml
+++ b/heat-templates/fragments/DatabaseInstances.yaml
@@ -41,6 +41,14 @@ parameters:
 
 resources:
 
+  boot_config:
+    type: OS::Heat::CloudConfig
+    properties:
+      cloud_config:
+        write_files:
+        - path: /tmp/.service_lib
+          content: { get_file: ../scripts/service_lib }
+
   software_config_01:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -62,6 +70,7 @@ resources:
     type: "OS::Heat::MultipartMime"
     properties:
       parts:
+      - config: {get_resource: boot_config}
       - config: {get_resource: software_config_01}
 
   software_config_02:
@@ -85,6 +94,7 @@ resources:
     type: "OS::Heat::MultipartMime"
     properties:
       parts:
+      - config: {get_resource: boot_config}
       - config: {get_resource: software_config_02}
 
   software_config_03:
@@ -108,6 +118,7 @@ resources:
     type: "OS::Heat::MultipartMime"
     properties:
       parts:
+      - config: {get_resource: boot_config}
       - config: {get_resource: software_config_03}
 
   server-01:
