Implement disk autodetect
The patch implements logic to detect volume's disk name
when database_disk set to auto.

Related-Prod: PRODX-29735
Change-Id: I4ca3b86e482462b87c4080d25d0a80f2ba555462

--- a/heat-templates/top.yaml
+++ b/heat-templates/top.yaml
@@ -16,7 +16,7 @@ parameters:
   database_disk:
     type: string
     description: Dedicated disk for database
-    default: '/dev/vdb'
+    default: 'auto'
   app_network_cidr:
     type: string
     description: The CIDR of application network.
