Support update tag of image by tox
$ tox -e update-image -- <tag>

Related-Bug: PRODX-30833
Change-Id: Ia446fbdb776fbf3532b06c714a4d3b50901c3da2

--- a/tox.ini
+++ b/tox.ini
@@ -60,3 +60,15 @@ commands =
 [flake8]
 extend-ignore = E203
 #extend-ignore = E203,E501
+
+[image]
+source = mirantis.azurecr.io/openstack/openstack-refapp
+
+[testenv:update-image]
+skip_install = True
+whitelist_externals =
+    sed
+    git
+commands =
+    sed -i "s|\({[image]source}:\)[[:alnum:].]*|\1{posargs}|" {toxinidir}/heat-templates/top.yaml {toxinidir}/terraform/001-input.tf
+    git commit -am "Prepare release {posargs}"
