--- a/heat-templates/top.yaml
+++ b/heat-templates/top.yaml
@@ -32,7 +32,7 @@ parameters:
     default: 'public'
   app_docker_image:
     type: string
-    default: 'mirantis.azurecr.io/openstack/openstack-refapp:0.0.1.dev33'
+    default: 'mirantis.azurecr.io/openstack/openstack-refapp:0.1.1'
     description: The link to docker image with App
   dns_nameservers:
     type: json
