Add cloudprober tags for instances
Related-Prod: https://mirantis.jira.com/browse/PRODX-31174
Change-Id: I4870d7a6b9a7ddcb4663f814d18e3c41d1f78580

--- a/heat-templates/fragments/AppInstances.yaml
+++ b/heat-templates/fragments/AppInstances.yaml
@@ -11,6 +11,10 @@ parameters:
   flavor:
     type: string
     description: Flavor to use for servers
+  server_tags:
+    type: json
+    description: Tags for servers
+    default: ["openstack.lcm.mirantis.com:prober"]
   app_network_id:
     type: string
   app_subnet_id:
@@ -183,6 +187,7 @@ resources:
         - port: { get_resource: private_server_01_port }
       user_data_format: SOFTWARE_CONFIG
       user_data: { get_resource:  install_config_agent_01}
+      tags: { get_param: server_tags }
 
   server-02:
     depends_on:
@@ -197,6 +202,7 @@ resources:
         - port: { get_resource: private_server_02_port }
       user_data_format: SOFTWARE_CONFIG
       user_data: { get_resource:  install_config_agent_02}
+      tags: { get_param: server_tags }
 
   server-03:
     depends_on:
@@ -211,6 +217,7 @@ resources:
         - port: { get_resource: private_server_03_port }
       user_data_format: SOFTWARE_CONFIG
       user_data: { get_resource:  install_config_agent_03}
+      tags: { get_param: server_tags }
 
   server-04:
     depends_on:
@@ -226,6 +233,7 @@ resources:
         - port: { get_resource: private_server_04_port }
       user_data_format: SOFTWARE_CONFIG
       user_data: { get_resource:  install_config_agent_04}
+      tags: { get_param: server_tags }
 
   private_server_01_port:
     type: OS::Neutron::Port
