--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ commands =
 
 [testenv:bashate]
 envdir={toxworkdir}/pep8
-whitelist_externals = bash
+allowlist_externals = bash
 commands = bash -c "find {toxinidir}             \
          -not \( -type d -name .?\* -prune \)    \
          -not \( -type d -name doc -prune \)     \
@@ -66,7 +66,7 @@ source = mirantis.azurecr.io/openstack/openstack-refapp
 
 [testenv:update-image]
 skip_install = True
-whitelist_externals =
+allowlist_externals =
     sed
     git
 commands =
